@@ -22,6 +22,7 @@ procps-ng-NEXT
   * sysctl: Use options after --system                     Debian #978989
   * top: provides for ignoring configuration file(s)       issue #365
   * top: fix legacy configuration file vulnerability       issue #384
+  * top: added a new help screen for specialized keys
   * w: Add terminal mode to show all terminal sessions     issue #375
   * w: Use process TTY as backup for user TTY              Debian #1080335
   * w: Use correct return value for sd_get_sessions        Debian #1068904
